tests/snapshots/test_runner__tests__compiler__typecheck__record_type_3__record_type_3.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
entry
  let x = {
    x = 2,
    y = "hello"
  };

  let z = x .a;
  ()

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/record_type_3/record_type_3.kk:7:14
  │
7 │   let z = x .a;
  │              ^ Unknown variable `a`
  │
  = Cannot find this value symbol in the current scope
